--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon server.js",
-    "dev": "nodemon app.js",
-    "build": "webpack"
+    "dev": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
